# ksig

./: Makefile  README.md
src/: CMakeLists.txt  ksig.cpp  ksig.desktop  ksig.h  main.cpp  siggenerator.cpp  siglistview.cpp  siglistview.h  siglistviewitem.cpp  siglistviewitem.h  standardtext.cpp  standardtext.h  standardtextbase.ui
src/po/: CMakeLists.txt
src/po/ar/: ksig.po
src/po/be/: ksig.po
src/po/bg/: ksig.po
src/po/br/: ksig.po
src/po/ca/: ksig.po
src/po/cs/: ksig.po
src/po/cy/: ksig.po
src/po/da/: ksig.po
src/po/de/: ksig.po
src/po/el/: ksig.po
src/po/en_GB/: ksig.po
src/po/es/: ksig.po
src/po/et/: ksig.po
src/po/eu/: ksig.po
src/po/fa/: ksig.po
src/po/fi/: ksig.po
src/po/fr/: ksig.po
src/po/fy/: ksig.po
src/po/ga/: ksig.po
src/po/gl/: ksig.po
src/po/he/: ksig.po
src/po/hr/: ksig.po
src/po/hu/: ksig.po
src/po/is/: ksig.po
src/po/it/: ksig.po
src/po/ja/: ksig.po
src/po/kk/: ksig.po
src/po/km/: ksig.po
src/po/ko/: ksig.po
src/po/lt/: ksig.po
src/po/mk/: ksig.po
src/po/ms/: ksig.po
src/po/nb/: ksig.po
src/po/nds/: ksig.po
src/po/ne/: ksig.po
src/po/nl/: ksig.po
src/po/nn/: ksig.po
src/po/oc/: ksig.po
src/po/pa/: ksig.po
src/po/pl/: ksig.po
src/po/pt/: ksig.po
src/po/pt_BR/: ksig.po
src/po/ro/: ksig.po
src/po/ru/: ksig.po
src/po/se/: ksig.po
src/po/sk/: ksig.po
src/po/sl/: ksig.po
src/po/sr/: ksig.po
src/po/sv/: ksig.po
src/po/ta/: ksig.po
src/po/tg/: ksig.po
src/po/tr/: ksig.po
src/po/uk/: ksig.po
src/po/uz/: ksig.po
src/po/vi/: ksig.po
src/po/xh/: ksig.po
src/po/zh_CN/: ksig.po
src/po/zh_TW/: ksig.po
