add_subdirectory( ar )
add_subdirectory( be )
add_subdirectory( bg )
add_subdirectory( br )
add_subdirectory( ca )
add_subdirectory( cs )
add_subdirectory( cy )
add_subdirectory( da )
add_subdirectory( de )
add_subdirectory( el )
add_subdirectory( en_GB )
add_subdirectory( es )
add_subdirectory( et )
add_subdirectory( eu )
add_subdirectory( fa )
add_subdirectory( fi )
add_subdirectory( fr )
add_subdirectory( fy )
add_subdirectory( ga )
add_subdirectory( gl )
add_subdirectory( he )
add_subdirectory( hr )
add_subdirectory( hu )
add_subdirectory( is )
add_subdirectory( it )
add_subdirectory( ja )
add_subdirectory( kk )
add_subdirectory( km )
add_subdirectory( ko )
add_subdirectory( lt )
add_subdirectory( mk )
add_subdirectory( ms )
add_subdirectory( nb )
add_subdirectory( nds )
add_subdirectory( ne )
add_subdirectory( nl )
add_subdirectory( nn )
add_subdirectory( oc )
add_subdirectory( pa )
add_subdirectory( pl )
add_subdirectory( pt )
add_subdirectory( pt_BR )
add_subdirectory( ro )
add_subdirectory( ru )
add_subdirectory( se )
add_subdirectory( sk )
add_subdirectory( sl )
add_subdirectory( sr )
add_subdirectory( sv )
add_subdirectory( ta )
add_subdirectory( tg )
add_subdirectory( tr )
add_subdirectory( uk )
add_subdirectory( uz )
add_subdirectory( vi )
add_subdirectory( xh )
add_subdirectory( zh_CN )
add_subdirectory( zh_TW )
